Fixing CSS issue with overflow

--- a/css/site.css
+++ b/css/site.css
@@ -123,11 +123,16 @@ article > p {
 pre {
 	padding: 0px;
 	font-size: 18px;
+	word-wrap: normal;
 }
 
 code {
 	background-color: #222;
 	color: white;
+}
+
+pre code {
+	white-space: pre;
 }
 
 iframe {
